parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function_declaration program
Rule 2     program -> empty
Rule 3     line -> statement SEMICOLON
Rule 4     line -> expression SEMICOLON
Rule 5     line -> loop_statement
Rule 6     line -> if_statement
Rule 7     statement -> ID EQUALS expression
Rule 8     statement -> declaration EQUALS expression
Rule 9     statement -> VOID ID LPAREN args RPAREN LBRACKET body RBRACKET
Rule 10    function_declaration -> type ID LPAREN args RPAREN LBRACKET body RBRACKET
Rule 11    declaration -> type ID
Rule 12    body -> line body
Rule 13    body -> empty
Rule 14    if_statement -> IF LPAREN expression RPAREN LBRACKET body RBRACKET else_statement
Rule 15    if_statement -> IF LPAREN expression RPAREN line else_statement
Rule 16    else_statement -> ELSE LBRACKET body RBRACKET
Rule 17    else_statement -> ELSE line
Rule 18    else_statement -> empty
Rule 19    loop_statement -> WHILE LPAREN expression RPAREN LBRACKET body RBRACKET
Rule 20    loop_statement -> WHILE LPAREN expression RPAREN line
Rule 21    loop_statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET body RBRACKET
Rule 22    loop_statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN line
Rule 23    args -> declaration COMMA args
Rule 24    args -> declaration
Rule 25    args -> empty
Rule 26    function_args -> expression COMMA function_args
Rule 27    function_args -> expression
Rule 28    function_args -> empty
Rule 29    statement -> RETURN ID
Rule 30    statement -> RETURN expression
Rule 31    expression -> ID LPAREN function_args RPAREN
Rule 32    expression -> expression compare_operator expression
Rule 33    expression -> PRINTF LPAREN STRING COMMA function_args RPAREN
Rule 34    expression -> PRINTF LPAREN STRING RPAREN
Rule 35    statement -> ID INCREMENT
Rule 36    statement -> ID DECREMENT
Rule 37    compare_operator -> COMPARISON
Rule 38    compare_operator -> GREATER
Rule 39    compare_operator -> LESS
Rule 40    compare_operator -> LESSEQUAL
Rule 41    compare_operator -> GREATEREQUAL
Rule 42    expression -> expression math_operator expression
Rule 43    statement -> expression math_operator EQUALS expression
Rule 44    math_operator -> PLUS
Rule 45    math_operator -> MINUS
Rule 46    math_operator -> TIMES
Rule 47    math_operator -> DIVIDE
Rule 48    math_operator -> MODULO
Rule 49    expression -> LPAREN expression RPAREN
Rule 50    expression -> NUMBER
Rule 51    expression -> ID
Rule 52    type -> INT
Rule 53    type -> FLOAT
Rule 54    type -> DOUBLE
Rule 55    type -> CHAR
Rule 56    empty -> <empty>

Terminals, with rules where they appear

CHAR                 : 55
COMMA                : 23 26 33
COMPARISON           : 37
DECREMENT            : 36
DIVIDE               : 47
DOUBLE               : 54
ELSE                 : 16 17
EQUALS               : 7 8 43
FLOAT                : 53
FOR                  : 21 22
GREATER              : 38
GREATEREQUAL         : 41
ID                   : 7 9 10 11 29 31 35 36 51
IF                   : 14 15
INCREMENT            : 35
INT                  : 52
LBRACKET             : 9 10 14 16 19 21
LESS                 : 39
LESSEQUAL            : 40
LPAREN               : 9 10 14 15 19 20 21 22 31 33 34 49
MINUS                : 45
MODULO               : 48
NUMBER               : 50
PLUS                 : 44
PRINTF               : 33 34
RBRACKET             : 9 10 14 16 19 21
RETURN               : 29 30
RPAREN               : 9 10 14 15 19 20 21 22 31 33 34 49
SEMICOLON            : 3 4 21 21 22 22
STRING               : 33 34
TIMES                : 46
VOID                 : 9
WHILE                : 19 20
error                : 

Nonterminals, with rules where they appear

args                 : 9 10 23
body                 : 9 10 12 14 16 19 21
compare_operator     : 32
declaration          : 8 23 24
else_statement       : 14 15
empty                : 2 13 18 25 28
expression           : 4 7 8 14 15 19 20 21 22 26 27 30 32 32 42 42 43 43 49
function_args        : 26 31 33
function_declaration : 1
if_statement         : 6
line                 : 12 15 17 20 22
loop_statement       : 5
math_operator        : 42 43
program              : 1 0
statement            : 3 21 21 22 22
type                 : 10 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_declaration program
    (2) program -> . empty
    (10) function_declaration -> . type ID LPAREN args RPAREN LBRACKET body RBRACKET
    (56) empty -> .
    (52) type -> . INT
    (53) type -> . FLOAT
    (54) type -> . DOUBLE
    (55) type -> . CHAR

    $end            reduce using rule 56 (empty -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 7
    CHAR            shift and go to state 8

    program                        shift and go to state 1
    function_declaration           shift and go to state 2
    empty                          shift and go to state 3
    type                           shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> function_declaration . program
    (1) program -> . function_declaration program
    (2) program -> . empty
    (10) function_declaration -> . type ID LPAREN args RPAREN LBRACKET body RBRACKET
    (56) empty -> .
    (52) type -> . INT
    (53) type -> . FLOAT
    (54) type -> . DOUBLE
    (55) type -> . CHAR

    $end            reduce using rule 56 (empty -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 7
    CHAR            shift and go to state 8

    function_declaration           shift and go to state 2
    program                        shift and go to state 9
    empty                          shift and go to state 3
    type                           shift and go to state 4

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (10) function_declaration -> type . ID LPAREN args RPAREN LBRACKET body RBRACKET

    ID              shift and go to state 10


state 5

    (52) type -> INT .

    ID              reduce using rule 52 (type -> INT .)


state 6

    (53) type -> FLOAT .

    ID              reduce using rule 53 (type -> FLOAT .)


state 7

    (54) type -> DOUBLE .

    ID              reduce using rule 54 (type -> DOUBLE .)


state 8

    (55) type -> CHAR .

    ID              reduce using rule 55 (type -> CHAR .)


state 9

    (1) program -> function_declaration program .

    $end            reduce using rule 1 (program -> function_declaration program .)


state 10

    (10) function_declaration -> type ID . LPAREN args RPAREN LBRACKET body RBRACKET

    LPAREN          shift and go to state 11


state 11

    (10) function_declaration -> type ID LPAREN . args RPAREN LBRACKET body RBRACKET
    (23) args -> . declaration COMMA args
    (24) args -> . declaration
    (25) args -> . empty
    (11) declaration -> . type ID
    (56) empty -> .
    (52) type -> . INT
    (53) type -> . FLOAT
    (54) type -> . DOUBLE
    (55) type -> . CHAR

    RPAREN          reduce using rule 56 (empty -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 7
    CHAR            shift and go to state 8

    type                           shift and go to state 12
    args                           shift and go to state 13
    declaration                    shift and go to state 14
    empty                          shift and go to state 15

state 12

    (11) declaration -> type . ID

    ID              shift and go to state 16


state 13

    (10) function_declaration -> type ID LPAREN args . RPAREN LBRACKET body RBRACKET

    RPAREN          shift and go to state 17


state 14

    (23) args -> declaration . COMMA args
    (24) args -> declaration .

    COMMA           shift and go to state 18
    RPAREN          reduce using rule 24 (args -> declaration .)


state 15

    (25) args -> empty .

    RPAREN          reduce using rule 25 (args -> empty .)


state 16

    (11) declaration -> type ID .

    COMMA           reduce using rule 11 (declaration -> type ID .)
    RPAREN          reduce using rule 11 (declaration -> type ID .)
    EQUALS          reduce using rule 11 (declaration -> type ID .)


state 17

    (10) function_declaration -> type ID LPAREN args RPAREN . LBRACKET body RBRACKET

    LBRACKET        shift and go to state 19


state 18

    (23) args -> declaration COMMA . args
    (23) args -> . declaration COMMA args
    (24) args -> . declaration
    (25) args -> . empty
    (11) declaration -> . type ID
    (56) empty -> .
    (52) type -> . INT
    (53) type -> . FLOAT
    (54) type -> . DOUBLE
    (55) type -> . CHAR

    RPAREN          reduce using rule 56 (empty -> .)
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 7
    CHAR            shift and go to state 8

    declaration                    shift and go to state 14
    args                           shift and go to state 20
    empty                          shift and go to state 15
    type                           shift and go to state 12

state 19

    (10) function_declaration -> type ID LPAREN args RPAREN LBRACKET . body RBRACKET
    (12) body -> . line body
    (13) body -> . empty
    (3) line -> . statement SEMICOLON
    (4) line -> . expression SEMICOLON
    (5) line -> . loop_statement
    (6) line -> . if_statement
    (56) empty -> .
    (7) statement -> . ID EQUALS expression
    (8) statement -> . declaration EQUALS expression
    (9) statement -> . VOID ID LPAREN args RPAREN LBRACKET body RBRACKET
    (29) statement -> . RETURN ID
    (30) statement -> . RETURN expression
    (35) statement -> . ID INCREMENT
    (36) statement -> . ID DECREMENT
    (43) statement -> . expression math_operator EQUALS expression
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID
    (19) loop_statement -> . WHILE LPAREN expression RPAREN LBRACKET body RBRACKET
    (20) loop_statement -> . WHILE LPAREN expression RPAREN line
    (21) loop_statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET body RBRACKET
    (22) loop_statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN line
    (14) if_statement -> . IF LPAREN expression RPAREN LBRACKET body RBRACKET else_statement
    (15) if_statement -> . IF LPAREN expression RPAREN line else_statement
    (11) declaration -> . type ID
    (52) type -> . INT
    (53) type -> . FLOAT
    (54) type -> . DOUBLE
    (55) type -> . CHAR

    RBRACKET        reduce using rule 56 (empty -> .)
    ID              shift and go to state 21
    VOID            shift and go to state 31
    RETURN          shift and go to state 32
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    IF              shift and go to state 37
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 7
    CHAR            shift and go to state 8

    type                           shift and go to state 12
    body                           shift and go to state 23
    line                           shift and go to state 24
    empty                          shift and go to state 25
    statement                      shift and go to state 26
    expression                     shift and go to state 27
    loop_statement                 shift and go to state 28
    if_statement                   shift and go to state 29
    declaration                    shift and go to state 30

state 20

    (23) args -> declaration COMMA args .

    RPAREN          reduce using rule 23 (args -> declaration COMMA args .)


state 21

    (7) statement -> ID . EQUALS expression
    (35) statement -> ID . INCREMENT
    (36) statement -> ID . DECREMENT
    (31) expression -> ID . LPAREN function_args RPAREN
    (51) expression -> ID .

    EQUALS          shift and go to state 38
    INCREMENT       shift and go to state 39
    DECREMENT       shift and go to state 40
    LPAREN          shift and go to state 41
    SEMICOLON       reduce using rule 51 (expression -> ID .)
    PLUS            reduce using rule 51 (expression -> ID .)
    MINUS           reduce using rule 51 (expression -> ID .)
    TIMES           reduce using rule 51 (expression -> ID .)
    DIVIDE          reduce using rule 51 (expression -> ID .)
    MODULO          reduce using rule 51 (expression -> ID .)
    COMPARISON      reduce using rule 51 (expression -> ID .)
    GREATER         reduce using rule 51 (expression -> ID .)
    LESS            reduce using rule 51 (expression -> ID .)
    LESSEQUAL       reduce using rule 51 (expression -> ID .)
    GREATEREQUAL    reduce using rule 51 (expression -> ID .)


state 22

    (49) expression -> LPAREN . expression RPAREN
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID

    ID              shift and go to state 43
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34

    expression                     shift and go to state 42

state 23

    (10) function_declaration -> type ID LPAREN args RPAREN LBRACKET body . RBRACKET

    RBRACKET        shift and go to state 44


state 24

    (12) body -> line . body
    (12) body -> . line body
    (13) body -> . empty
    (3) line -> . statement SEMICOLON
    (4) line -> . expression SEMICOLON
    (5) line -> . loop_statement
    (6) line -> . if_statement
    (56) empty -> .
    (7) statement -> . ID EQUALS expression
    (8) statement -> . declaration EQUALS expression
    (9) statement -> . VOID ID LPAREN args RPAREN LBRACKET body RBRACKET
    (29) statement -> . RETURN ID
    (30) statement -> . RETURN expression
    (35) statement -> . ID INCREMENT
    (36) statement -> . ID DECREMENT
    (43) statement -> . expression math_operator EQUALS expression
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID
    (19) loop_statement -> . WHILE LPAREN expression RPAREN LBRACKET body RBRACKET
    (20) loop_statement -> . WHILE LPAREN expression RPAREN line
    (21) loop_statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET body RBRACKET
    (22) loop_statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN line
    (14) if_statement -> . IF LPAREN expression RPAREN LBRACKET body RBRACKET else_statement
    (15) if_statement -> . IF LPAREN expression RPAREN line else_statement
    (11) declaration -> . type ID
    (52) type -> . INT
    (53) type -> . FLOAT
    (54) type -> . DOUBLE
    (55) type -> . CHAR

    RBRACKET        reduce using rule 56 (empty -> .)
    ID              shift and go to state 21
    VOID            shift and go to state 31
    RETURN          shift and go to state 32
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    IF              shift and go to state 37
    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    DOUBLE          shift and go to state 7
    CHAR            shift and go to state 8

    line                           shift and go to state 24
    body                           shift and go to state 45
    empty                          shift and go to state 25
    statement                      shift and go to state 26
    expression                     shift and go to state 27
    loop_statement                 shift and go to state 28
    if_statement                   shift and go to state 29
    declaration                    shift and go to state 30
    type                           shift and go to state 12

state 25

    (13) body -> empty .

    RBRACKET        reduce using rule 13 (body -> empty .)


state 26

    (3) line -> statement . SEMICOLON

    SEMICOLON       shift and go to state 46


state 27

    (4) line -> expression . SEMICOLON
    (43) statement -> expression . math_operator EQUALS expression
    (32) expression -> expression . compare_operator expression
    (42) expression -> expression . math_operator expression
    (44) math_operator -> . PLUS
    (45) math_operator -> . MINUS
    (46) math_operator -> . TIMES
    (47) math_operator -> . DIVIDE
    (48) math_operator -> . MODULO
    (37) compare_operator -> . COMPARISON
    (38) compare_operator -> . GREATER
    (39) compare_operator -> . LESS
    (40) compare_operator -> . LESSEQUAL
    (41) compare_operator -> . GREATEREQUAL

    SEMICOLON       shift and go to state 47
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    MODULO          shift and go to state 54
    COMPARISON      shift and go to state 55
    GREATER         shift and go to state 56
    LESS            shift and go to state 57
    LESSEQUAL       shift and go to state 58
    GREATEREQUAL    shift and go to state 59

    math_operator                  shift and go to state 48
    compare_operator               shift and go to state 49

state 28

    (5) line -> loop_statement .

    ID              reduce using rule 5 (line -> loop_statement .)
    VOID            reduce using rule 5 (line -> loop_statement .)
    RETURN          reduce using rule 5 (line -> loop_statement .)
    PRINTF          reduce using rule 5 (line -> loop_statement .)
    LPAREN          reduce using rule 5 (line -> loop_statement .)
    NUMBER          reduce using rule 5 (line -> loop_statement .)
    WHILE           reduce using rule 5 (line -> loop_statement .)
    FOR             reduce using rule 5 (line -> loop_statement .)
    IF              reduce using rule 5 (line -> loop_statement .)
    INT             reduce using rule 5 (line -> loop_statement .)
    FLOAT           reduce using rule 5 (line -> loop_statement .)
    DOUBLE          reduce using rule 5 (line -> loop_statement .)
    CHAR            reduce using rule 5 (line -> loop_statement .)
    RBRACKET        reduce using rule 5 (line -> loop_statement .)
    ELSE            reduce using rule 5 (line -> loop_statement .)


state 29

    (6) line -> if_statement .

    ID              reduce using rule 6 (line -> if_statement .)
    VOID            reduce using rule 6 (line -> if_statement .)
    RETURN          reduce using rule 6 (line -> if_statement .)
    PRINTF          reduce using rule 6 (line -> if_statement .)
    LPAREN          reduce using rule 6 (line -> if_statement .)
    NUMBER          reduce using rule 6 (line -> if_statement .)
    WHILE           reduce using rule 6 (line -> if_statement .)
    FOR             reduce using rule 6 (line -> if_statement .)
    IF              reduce using rule 6 (line -> if_statement .)
    INT             reduce using rule 6 (line -> if_statement .)
    FLOAT           reduce using rule 6 (line -> if_statement .)
    DOUBLE          reduce using rule 6 (line -> if_statement .)
    CHAR            reduce using rule 6 (line -> if_statement .)
    RBRACKET        reduce using rule 6 (line -> if_statement .)
    ELSE            reduce using rule 6 (line -> if_statement .)


state 30

    (8) statement -> declaration . EQUALS expression

    EQUALS          shift and go to state 60


state 31

    (9) statement -> VOID . ID LPAREN args RPAREN LBRACKET body RBRACKET

    ID              shift and go to state 61


state 32

    (29) statement -> RETURN . ID
    (30) statement -> RETURN . expression
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID

    ID              shift and go to state 62
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34

    expression                     shift and go to state 63

state 33

    (33) expression -> PRINTF . LPAREN STRING COMMA function_args RPAREN
    (34) expression -> PRINTF . LPAREN STRING RPAREN

    LPAREN          shift and go to state 64


state 34

    (50) expression -> NUMBER .

    SEMICOLON       reduce using rule 50 (expression -> NUMBER .)
    PLUS            reduce using rule 50 (expression -> NUMBER .)
    MINUS           reduce using rule 50 (expression -> NUMBER .)
    TIMES           reduce using rule 50 (expression -> NUMBER .)
    DIVIDE          reduce using rule 50 (expression -> NUMBER .)
    MODULO          reduce using rule 50 (expression -> NUMBER .)
    COMPARISON      reduce using rule 50 (expression -> NUMBER .)
    GREATER         reduce using rule 50 (expression -> NUMBER .)
    LESS            reduce using rule 50 (expression -> NUMBER .)
    LESSEQUAL       reduce using rule 50 (expression -> NUMBER .)
    GREATEREQUAL    reduce using rule 50 (expression -> NUMBER .)
    RPAREN          reduce using rule 50 (expression -> NUMBER .)
    COMMA           reduce using rule 50 (expression -> NUMBER .)


state 35

    (19) loop_statement -> WHILE . LPAREN expression RPAREN LBRACKET body RBRACKET
    (20) loop_statement -> WHILE . LPAREN expression RPAREN line

    LPAREN          shift and go to state 65


state 36

    (21) loop_statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LBRACKET body RBRACKET
    (22) loop_statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN line

    LPAREN          shift and go to state 66


state 37

    (14) if_statement -> IF . LPAREN expression RPAREN LBRACKET body RBRACKET else_statement
    (15) if_statement -> IF . LPAREN expression RPAREN line else_statement

    LPAREN          shift and go to state 67


state 38

    (7) statement -> ID EQUALS . expression
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID

    ID              shift and go to state 43
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34

    expression                     shift and go to state 68

state 39

    (35) statement -> ID INCREMENT .

    SEMICOLON       reduce using rule 35 (statement -> ID INCREMENT .)
    RPAREN          reduce using rule 35 (statement -> ID INCREMENT .)


state 40

    (36) statement -> ID DECREMENT .

    SEMICOLON       reduce using rule 36 (statement -> ID DECREMENT .)
    RPAREN          reduce using rule 36 (statement -> ID DECREMENT .)


state 41

    (31) expression -> ID LPAREN . function_args RPAREN
    (26) function_args -> . expression COMMA function_args
    (27) function_args -> . expression
    (28) function_args -> . empty
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID
    (56) empty -> .

    ID              shift and go to state 43
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34
    RPAREN          reduce using rule 56 (empty -> .)

    function_args                  shift and go to state 69
    expression                     shift and go to state 70
    empty                          shift and go to state 71

state 42

    (49) expression -> LPAREN expression . RPAREN
    (32) expression -> expression . compare_operator expression
    (42) expression -> expression . math_operator expression
    (37) compare_operator -> . COMPARISON
    (38) compare_operator -> . GREATER
    (39) compare_operator -> . LESS
    (40) compare_operator -> . LESSEQUAL
    (41) compare_operator -> . GREATEREQUAL
    (44) math_operator -> . PLUS
    (45) math_operator -> . MINUS
    (46) math_operator -> . TIMES
    (47) math_operator -> . DIVIDE
    (48) math_operator -> . MODULO

    RPAREN          shift and go to state 72
    COMPARISON      shift and go to state 55
    GREATER         shift and go to state 56
    LESS            shift and go to state 57
    LESSEQUAL       shift and go to state 58
    GREATEREQUAL    shift and go to state 59
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    TIMES           shift and go to state 52
    DIVIDE          shift and go to state 53
    MODULO          shift and go to state 54

    compare_operator               shift and go to state 49
    math_operator                  shift and go to state 73

state 43

    (31) expression -> ID . LPAREN function_args RPAREN
    (51) expression -> ID .

    LPAREN          shift and go to state 41
    RPAREN          reduce using rule 51 (expression -> ID .)
    COMPARISON      reduce using rule 51 (expression -> ID .)
    GREATER         reduce using rule 51 (expression -> ID .)
    LESS            reduce using rule 51 (expression -> ID .)
    LESSEQUAL       reduce using rule 51 (expression -> ID .)
    GREATEREQUAL    reduce using rule 51 (expression -> ID .)
    PLUS            reduce using rule 51 (expression -> ID .)
    MINUS           reduce using rule 51 (expression -> ID .)
    TIMES           reduce using rule 51 (expression -> ID .)
    DIVIDE          reduce using rule 51 (expression -> ID .)
    MODULO          reduce using rule 51 (expression -> ID .)
    SEMICOLON       reduce using rule 51 (expression -> ID .)
    COMMA           reduce using rule 51 (expression -> ID .)


state 44

    (10) function_declaration -> type ID LPAREN args RPAREN LBRACKET body RBRACKET .

    INT             reduce using rule 10 (function_declaration -> type ID LPAREN args RPAREN LBRACKET body RBRACKET .)
    FLOAT           reduce using rule 10 (function_declaration -> type ID LPAREN args RPAREN LBRACKET body RBRACKET .)
    DOUBLE          reduce using rule 10 (function_declaration -> type ID LPAREN args RPAREN LBRACKET body RBRACKET .)
    CHAR            reduce using rule 10 (function_declaration -> type ID LPAREN args RPAREN LBRACKET body RBRACKET .)
    $end            reduce using rule 10 (function_declaration -> type ID LPAREN args RPAREN LBRACKET body RBRACKET .)


state 45

    (12) body -> line body .

    RBRACKET        reduce using rule 12 (body -> line body .)


state 46

    (3) line -> statement SEMICOLON .

    ID              reduce using rule 3 (line -> statement SEMICOLON .)
    VOID            reduce using rule 3 (line -> statement SEMICOLON .)
    RETURN          reduce using rule 3 (line -> statement SEMICOLON .)
    PRINTF          reduce using rule 3 (line -> statement SEMICOLON .)
    LPAREN          reduce using rule 3 (line -> statement SEMICOLON .)
    NUMBER          reduce using rule 3 (line -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (line -> statement SEMICOLON .)
    FOR             reduce using rule 3 (line -> statement SEMICOLON .)
    IF              reduce using rule 3 (line -> statement SEMICOLON .)
    INT             reduce using rule 3 (line -> statement SEMICOLON .)
    FLOAT           reduce using rule 3 (line -> statement SEMICOLON .)
    DOUBLE          reduce using rule 3 (line -> statement SEMICOLON .)
    CHAR            reduce using rule 3 (line -> statement SEMICOLON .)
    RBRACKET        reduce using rule 3 (line -> statement SEMICOLON .)
    ELSE            reduce using rule 3 (line -> statement SEMICOLON .)


state 47

    (4) line -> expression SEMICOLON .

    ID              reduce using rule 4 (line -> expression SEMICOLON .)
    VOID            reduce using rule 4 (line -> expression SEMICOLON .)
    RETURN          reduce using rule 4 (line -> expression SEMICOLON .)
    PRINTF          reduce using rule 4 (line -> expression SEMICOLON .)
    LPAREN          reduce using rule 4 (line -> expression SEMICOLON .)
    NUMBER          reduce using rule 4 (line -> expression SEMICOLON .)
    WHILE           reduce using rule 4 (line -> expression SEMICOLON .)
    FOR             reduce using rule 4 (line -> expression SEMICOLON .)
    IF              reduce using rule 4 (line -> expression SEMICOLON .)
    INT             reduce using rule 4 (line -> expression SEMICOLON .)
    FLOAT           reduce using rule 4 (line -> expression SEMICOLON .)
    DOUBLE          reduce using rule 4 (line -> expression SEMICOLON .)
    CHAR            reduce using rule 4 (line -> expression SEMICOLON .)
    RBRACKET        reduce using rule 4 (line -> expression SEMICOLON .)
    ELSE            reduce using rule 4 (line -> expression SEMICOLON .)


state 48

    (43) statement -> expression math_operator . EQUALS expression
    (42) expression -> expression math_operator . expression
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID

    EQUALS          shift and go to state 75
    ID              shift and go to state 43
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34

    expression                     shift and go to state 74

state 49

    (32) expression -> expression compare_operator . expression
    (31) expression -> . ID LPAREN function_args RPAREN
    (32) expression -> . expression compare_operator expression
    (33) expression -> . PRINTF LPAREN STRING COMMA function_args RPAREN
    (34) expression -> . PRINTF LPAREN STRING RPAREN
    (42) expression -> . expression math_operator expression
    (49) expression -> . LPAREN expression RPAREN
    (50) expression -> . NUMBER
    (51) expression -> . ID

    ID              shift and go to state 43
    PRINTF          shift and go to state 33
    LPAREN          shift and go to state 22
    NUMBER          shift and go to state 34

    expression                     shift and go to state 76

state 50

    (44) math_operator -> PLUS .

    EQUALS          reduce using rule 44 (math_operator -> PLUS .)
    ID              reduce using rule 44 (math_operator -> PLUS .)
    PRINTF          reduce using rule 44 (math_operator -> PLUS .)
    LPAREN          reduce using rule 44 (math_operator -> PLUS .)
    NUMBER          reduce using rule 44 (math_operator -> PLUS .)


state 51

    (45) math_operator -> MINUS .

    EQUALS          reduce using rule 45 (math_operator -> MINUS .)
    ID              reduce using rule 45 (math_operator -> MINUS .)
    PRINTF          reduce using rule 45 (math_operator -> MINUS .)
    LPAREN          reduce using rule 45 (math_operator -> MINUS .)
    NUMBER          reduce using rule 45 (math_operator -> MINUS .)


state 52

    (46) math_operator -> TIMES .

    EQUALS          reduce using rule 46 (math_operator -> TIMES .)
    ID              reduce using rule 46 (math_operator -> TIMES .)
    PRINTF          reduce using rule 46 (math_operator -> TIMES .)
    LPAREN          reduce using rule 46 (math_operator -> TIMES .)
    NUMBER          reduce using rule 46 (math_operator -> TIMES .)


state 53

    (47) math_operator -> DIVIDE .

    EQUALS          reduce using rule 47 (math_operator -> DIVIDE .)
    ID              reduce using rule 47 (math_operator -> DIVIDE .)
    PRINTF          reduce using rule 47 (math_operator -> DIVIDE .)
    LPAREN          reduce using rule 47 (math_operator -> DIVIDE .)
    NUMBER          reduce using rule 47 (math_operator -> DIVIDE .)


state 54

    (48) math_operator -> MODULO .

    EQUALS          reduce using rule 48 (math_operator -> MODULO .)
    ID              reduce using rule 48 (math_operator -> MODULO .)
    PRINTF          reduce using rule 48 (math_operator -> MODULO .)
    LPAREN          reduce using rule 48 (math_operator -> MODULO .)
    NUMBER          reduce using rule 48 (math_operator -> MODULO .)


state 55

    (37) compare_operator -> COMPARISON .

    ID              reduce using rule 37 (compare_operator -> COMPARISON .)
    PRINTF          reduce using rule 37 (compare_operator -> COMPARISON .)
    LPAREN          reduce using rule 37 (compare_operator -> COMPARISON .)
    NUMBER          reduce using rule 37 (compare_operator -> COMPARISON .)


state 56

    (38) compare_operator -> GREATER .

    ID              reduce using rule 38 (compare_operator -> GREATER .)
    PRINTF          reduce using rule 38 (compare_operator -> GREATER .)
    LPAREN          reduce using rule 38 (compare_operator -> GREATER .)
    NUMBER          reduce using rule 38 (compare_operator -> GREATER .)


state 57

    (39) compare_operator -> LESS .

    ID              reduce using rule 39 (compare_operator -> LESS .)
    PRINTF          reduce using rule 39 (compare_operator -> LESS .)
    LPAREN          reduce using rule 39 (compare_operator -> LESS .)
    NUMBER          reduce using rule 39 (compare_operator -> LESS .)


state 58

    (40) compare_operator -> LESSEQUAL .

    ID              reduce using rule 40 (compare_operator -> LESSEQUAL .)
    PRINTF          reduce using rule 40 (compare_operator -> LESSEQUAL .)
    LPAREN          reduce using rule 40 (compare_operator -> LESSEQUAL .)
    NUMBER          reduce using rule 40 (compare_operator -> LESSEQUAL .)


state 59

    (41) compare_operator -> GREATEREQUAL .

    ID              reduce using rule 41 (compare_operator -> GREATEREQUAL .)
    PRINTF          reduce using rule 41 (compare_operator -> GREATEREQUAL .)
    LPAREN          reduce using rule 41 (compare_operator -> GREATEREQUAL .)
    NUMBER          reduce using rule 41 (compare_operator -> GREATEREQUAL .)


state 60
